# hccl

./: CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_en.md  LICENSE  README.md  README_en.md  SECURITY.md  SECURITY_en.md  Third_Party_Open_Source_Software_List.yaml  build.sh  build_third_party.sh  structure.md  version.cmake  version.info
examples/04_custom_ops_p2p/: CMakeLists.txt  README.md  README_en.md
examples/04_custom_ops_p2p/inc/: common.h  hccl_custom_p2p.h  log.h
examples/04_custom_ops_p2p/op_host/: CMakeLists.txt  launch_kernel.cc  launch_kernel.h  launch_kernel_asc.asc  load_kernel.cc  load_kernel.h  recv.cc  send.cc  utils.cc  utils.h
examples/04_custom_ops_p2p/op_kernel_aicpu/: CMakeLists.txt  aicpu_kernel.cc  aicpu_kernel_asc.aicpu  exec_op.cc  exec_op.h  libp2p_aicpu_kernel.json  load_kernel.h
examples/04_custom_ops_p2p/scripts/: hccl_custom_p2p_check_cfg.xml
examples/04_custom_ops_p2p/testcase/: Makefile  main.cc
examples/05_custom_ops_allgather/: CMakeLists.txt  README.md  README_en.md
examples/05_custom_ops_allgather/aicpu/: README.md  README_en.md
examples/05_custom_ops_allgather/aicpu/testcase/: main.cc
examples/05_custom_ops_allgather/ccu/: README.md  README_en.md
examples/05_custom_ops_allgather/ccu/testcase/: main.cc
examples/05_custom_ops_allgather/inc/: aiv_all_gather_mesh_1d.h  aiv_communication_base_v2.h  common.h  extra_args.h  hccl_custom_allgather.h  sync_interface.h
examples/05_custom_ops_allgather/op_host/: CMakeLists.txt  all_gather.cc  launch_kernel.cc  launch_kernel.h
examples/05_custom_ops_allgather/op_kernel/: CMakeLists.txt  launch_kernel_asc.asc
examples/05_custom_ops_allgather/testcase/: CMakeLists.txt  Makefile  main.cc
src/: CMakeLists.txt  scatter_aicpu_kernel.cmake
src/common/: CMakeLists.txt  adapter_acl.cc  adapter_acl.h  adapter_error_manager_pub.cc  adapter_error_manager_pub.h  alg_env_config.cc  alg_env_config.h  alg_type.cc  alg_type.h  compat.cc  config_log.cc  config_log.h  device_compat.cc  hccl_common.h  hccl_mc2.cc  inconsistent_check.cc  inconsistent_check.h  log.cc  log.h  order_preserved_common.h  param_check.cc  param_check.h  sal.cc  sal.h  static_restore.cc  utils.cc  utils.h
src/common/error_code/: CMakeLists.txt  error_code.cc
src/common/hcomm_dlsym/: CMakeLists.txt  ccu_launch_dl.cc  ccu_launch_dl.h  ccu_primitives_impl_dl.cc  ccu_primitives_impl_dl.h  ccu_res_dl.cc  ccu_res_dl.h  dlsym_common.h  dtype_common_dl.cc  dtype_common_dl.h  hccl_ccu_res_dl.cc  hccl_ccu_res_dl.h  hccl_comm_dl.cc  hccl_comm_dl.h  hccl_device_comm_dl.cc  hccl_device_comm_dl.h  hccl_ex_dl.cc  hccl_ex_dl.h  hccl_host_comm_dl.cc  hccl_host_comm_dl.h  hccl_inner_dl.cc  hccl_inner_dl.h  hccl_mc2_ex_dl.cc  hccl_mc2_ex_dl.h  hccl_one_sided_services_dl.cc  hccl_one_sided_services_dl.h  hccl_rank_graph_dl.cc  hccl_rank_graph_dl.h  hccl_res_dl.cc  hccl_res_dl.h  hccl_res_expt_dl.cc  hccl_res_expt_dl.h  hcom_dl.cc  hcom_dl.h  hcomm_device_dlsym.cc  hcomm_device_dlsym.h  hcomm_device_profiling_dl.cc  hcomm_device_profiling_dl.h  hcomm_diag_dl.cc  hcomm_diag_dl.h  (+6 more)
src/common/hcomm_dlsym/ccu/: ccu_address_dl.hpp  ccu_array_dl.hpp  ccu_buffer_dl.hpp  ccu_control_flow_macro_dl.h  ccu_event_dl.hpp  ccu_func_dl.hpp  ccu_local_addr_dl.hpp  ccu_loop_dl.hpp  ccu_primitives_dl.hpp  ccu_remote_addr_dl.hpp  ccu_types_dl.h  ccu_utils_dl.hpp  ccu_variable_dl.hpp
src/ops/: CMakeLists.txt  alg_template_base.cc  alg_template_base.h  executor_base.cc  executor_base.h
src/ops/aicpu/: CMakeLists.txt  kernel_launch.cc  kernel_launch.h  load_kernel.cc  load_kernel.h
src/ops/aicpu/dfx/: task_exception_fun.cc
src/ops/all_gather/: CMakeLists.txt  all_gather_op.cc  all_gather_op.h
src/ops/all_gather/executor/: CMakeLists.txt  ins_v2_all_gather_concurrent_executor.cc  ins_v2_all_gather_concurrent_executor.h  ins_v2_all_gather_omnipipe_2d_executor.cc  ins_v2_all_gather_omnipipe_2d_executor.h  ins_v2_all_gather_omnipipe_executor.cc  ins_v2_all_gather_omnipipe_executor.h  ins_v2_all_gather_parallel_executor.cc  ins_v2_all_gather_parallel_executor.h  ins_v2_all_gather_sequence_executor.cc  ins_v2_all_gather_sequence_executor.h  ins_v2_all_gather_sequence_executor_3level.cc  ins_v2_all_gather_sequence_executor_3level.h  ins_v2_all_gather_sequence_executor_aicpu.cc  ins_v2_all_gather_sequence_executor_aicpu.h  ins_v2_all_gather_sole_executor.cc  ins_v2_all_gather_sole_executor.h
src/ops/all_gather/op_graph/: CMakeLists.txt
src/ops/all_gather/selector/: CMakeLists.txt  all_gather_auto_selector.cc  all_gather_auto_selector.h
src/ops/all_gather/template/: CMakeLists.txt
src/ops/all_gather_v/: CMakeLists.txt  all_gather_v_op.cc  all_gather_v_op.h
src/ops/all_gather_v/executor/: CMakeLists.txt  (+2 more)
src/ops/all_reduce/: CMakeLists.txt  all_reduce_op.cc  all_reduce_op.h
src/ops/all_to_all_v/: CMakeLists.txt  all_to_all_v_op.cc  all_to_all_v_op.h
src/ops/barrier/: barrier_op.cc
src/ops/batch_send_recv/: CMakeLists.txt  batch_send_recv_op.cc  batch_send_recv_op.h
src/ops/broadcast/: CMakeLists.txt  broadcast_op.cc  broadcast_op.h
src/ops/channel/: channel.cc  channel.h  channel_request.cc  channel_request.h
src/ops/inc/: alg_param.h
src/ops/interface/: CMakeLists.txt  hccl_collective_op.cc
src/ops/interface_graph_mode/: calc_resource_graph_mode.cc
src/ops/op_common/: CMakeLists.txt  ccu_log.cc  ccu_log.h  omnipipe_data_slice_calc.cc  omnipipe_data_slice_calc.h  op_common.cc  op_common.h  op_common_ops.h
src/ops/recv/: CMakeLists.txt  recv_op.cc  recv_op.h
src/ops/reduce/: CMakeLists.txt  reduce_op.cc  reduce_op.h
src/ops/reduce_scatter/: CMakeLists.txt  reduce_scatter_op.cc  reduce_scatter_op.h
src/ops/reduce_scatter_v/: CMakeLists.txt  reduce_scatter_v_op.cc  reduce_scatter_v_op.h
src/ops/registry/: CMakeLists.txt  coll_alg_exec_registry.cc
src/ops/scatter/: CMakeLists.txt  scatter_aicpu_kernel.ini  scatter_op.cc  scatter_op.h
src/ops/send/: CMakeLists.txt  send_op.cc  send_op.h
src/ops/topo/: CMakeLists.txt  topo.cc  topo.h
test/st/algorithm/: CMakeLists.txt  README.md  README_en.md  build.sh
(+892 files in other folders)
